# sample-python-app

./: .releaserc  CHANGELOG.md  LICENSE  package.json
.github/workflows/: release.yml  scan-lib-dependencies.yml
lib/: pyproject.toml
lib/scripts/: scan.sh
lib/security/: reference.json  scanned.json
